<resources>
    <string name="app_name">RyanFlemingInvestmentCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="required_hint_string">Required</string>
    <string name="payment_label_string">Payment</string>
    <string name="rate_label_string">Rate</string>
    <string name="period_label_string"># of Periods</string>
    <string name="calculate_button_string">Calculate</string>
    <string name="default_value_string">0.00</string>
    <string name="default_period_value_string">0</string>
    <string name="default_result_string">$0.00</string>
</resources>
