<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.ryanfleminginvestmentcalculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextPayment"
        android:layout_gravity="center_horizontal"
        android:hint="@string/required_hint_string"
        android:text="@string/default_value_string"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payment_label_string"
        android:id="@+id/textViewPayment" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextRate"
        android:layout_gravity="center_horizontal"
        android:hint="@string/required_hint_string"
        android:text="@string/default_value_string"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rate_label_string"
        android:id="@+id/textViewRate" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextPeriod"
        android:layout_gravity="center_horizontal"
        android:hint="@string/required_hint_string"
        android:text="@string/default_period_value_string"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/period_label_string"
        android:id="@+id/textViewPeriod" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button_string"
        android:id="@+id/btnCalculate"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:enabled="true"
        android:onClick="onCalculateBtnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/default_result_string"
        android:id="@+id/textViewResult"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp" />

</LinearLayout>
